...
            Row(
                    modifier = Modifier.fillMaxWidth().padding(bottom = 8.dp, top = 24.dp),
                    horizontalArrangement = Arrangement.SpaceBetween,
                    verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                        text = "Flashcard Hub",
                        style = MaterialTheme.typography.displaySmall.copy(fontWeight = FontWeight.ExtraBold),
                        color = MaterialTheme.colorScheme.primary
                )
                Row(verticalAlignment = Alignment.CenterVertically) {
                    IconButton(onClick = { navController.navigate("settings") }) {
                        Icon(imageVector = Icons.Default.Person, contentDescription = "Settings")
                    }
                    Surface(
                            shape = Shapes.medium,
                            modifier = Modifier.clip(Shapes.medium).background(MemoGradientBrush).clickable { navController.navigate("billing") }
                    ) {
                        Text(
...
                                .size(40.dp)
                                .testTag("PlayButton")
                        ) {
                            Box(contentAlignment = Alignment.Center) {
                                Icon(
                                    imageVector = Icons.Default.PlayArrow,
                                    contentDescription = "Play",
                                    tint = MaterialTheme.colorScheme.primary,
                                    modifier = Modifier.size(24.dp)
                                )
                            }
                        }
                    } else {
...
