appId: com.firebaseailogic.memotattoo
---
- launchApp
- assertVisible: "Flashcard Hub"
- tapOn:
    point: "1094, 372"
- tapOn: "Set Bolts to 0 (Debug)"
- back
- assertVisible: "Flashcard Hub"
- runScript: sleep.js
- tapOn: "+"
- assertVisible: "Create Flashcard Deck"
- inputText: "Test Topic"
- hideKeyboard
- waitForAnimationToEnd
- runScript: sleep.js
- tapOn:
    id: "brainstorm_button"
- assertVisible: "You don't have enough energy bolts. Please buy more to continue or upgrade to PRO."
