appId: com.firebaseailogic.memotattoo
---
- launchApp
- assertVisible: "Flashcard Hub"
- tapOn: "Play"
- assertVisible: "Score: 0"
- inputText: "My Guess"
- runScript: sleep.js
- tapOn:
    label: "Send"
